--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,85 +1,112 @@
-
-.navbar{
-    background-color: #655643;
-    font-family: 'Raleway', sans-serif;
-}
-
-
-.navbar-brand{
-    color: #E6AC27;
-}
-
-.navbar-item:hover{
-   color: #E6AC27;
-}
-
-.navbar-item{
-    padding-left: 10px;
-    padding-right: 10px;
-    cursor: pointer;
-}
-
-
-
-
-img{
-    width: 190px;
-    height: 190px;
+    header{
+        font-family: 'Merriweather', serif;
+    }
     
-}
+    main{
+        font-family: 'Raleway', sans-serif;
+    }
 
-select{
-    background-color: rgba(0,0,0,0.2);
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  font-size: 16px;
-  color: #fff;
-  width: 220px;
-  height: 40px;
-  padding: 8px 15px;
-}
+    body{
+        background-color: #eee;
+    }
 
+/* Slide recherche avancée */
+    .panel {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        background: #FFF;
+        display: none;
+    }
 
-.liste {
-    display: grid;
-    grid-template-columns: 200px 200px 200px 200px 200px;
-    grid-auto-rows: 200px;
-    grid-gap: 1rem;
-  }
-  
-  
-  /* OTHER STYLES */
+    .slide{
+        padding-top: 10px;
+        text-align: center;
+    } 
 
-  
-  .listitem {
-    background-repeat: no-repeat;
-    background-size: 200px 200px;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    color: #fff;
-    border-radius: 4px;
-    border: 6px solid #171717;
-  }
+    .slide a{
+        color: black;
+    }
+
+    .slide a:hover{
+        text-decoration: none;
+    }
 
 
-
-.ombre {
-    box-shadow: inset 0px 0px 5px 5px rgba(0,0,0,0.19);
-}
-
-.bouton{
-    border-radius: 0;
-}
-
-.recherche{
-    border: none;
-    border-bottom: solid 1px gray;
-    border-radius: 0;
-}
-
-#recherche{
-    margin-bottom: 20px;
-}
-#reduire{
+    .pull-me p {
     text-align: center;
-}
+    }
+
+    .ombre {
+        box-shadow: inset 0px 0px 5px 5px rgba(0,0,0,0.19);
+    }
+
+/* Formulaire slide recherche avancée */
+
+    main .form-control{
+        background-color: rgba(238, 238, 238, 0.3);
+        border:none;
+        border-bottom: #aaa solid 1px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        border-radius: 0;
+    }
+
+
+   main .btn{
+      border-radius: 0;
+      margin:0 auto;
+      display:block;
+  }
+
+  main .container .form-inline{
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+  }
+
+/* Navbar */
+
+/* Liste */
+
+.flex-container {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .flex-item {
+    
+    
+    width: 200px;
+    height: 150px;
+    
+    line-height: 150px;
+    color: white;
+    font-weight: bold;
+    font-size: 3em;
+    text-align: center;
+
+    border: 1px white solid;
+
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 200px 150px;
+  }
+
+
+  .bandeau-champignon{
+      background-color: rgba(0,0,0,0.5);
+      height: 50px;
+
+  }
+
+  .nom-champignon{
+      font-size: 14px;
+      text-align: left;
+      
+  }
